lib/src/linux/bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// --- GdkPixbuf (libgdk_pixbuf-2.0) ---
@ffi.Native<ffi.Pointer<GdkPixbufLoader> Function()>()
external ffi.Pointer<GdkPixbufLoader> gdk_pixbuf_loader_new();

@ffi.Native<
  gboolean Function(
    ffi.Pointer<GdkPixbufLoader>,
    ffi.Pointer<guchar>,
    gsize,
    ffi.Pointer<ffi.Pointer<GError>>,
  )
>()
external int gdk_pixbuf_loader_write(
  ffi.Pointer<GdkPixbufLoader> loader,
  ffi.Pointer<guchar> buf,
  int count,
  ffi.Pointer<ffi.Pointer<GError>> error,
);

@ffi.Native<
  gboolean Function(
    ffi.Pointer<GdkPixbufLoader>,
    ffi.Pointer<ffi.Pointer<GError>>,
  )
>()
external int gdk_pixbuf_loader_close(
  ffi.Pointer<GdkPixbufLoader> loader,
  ffi.Pointer<ffi.Pointer<GError>> error,
);

@ffi.Native<ffi.Pointer<GdkPixbuf> Function(ffi.Pointer<GdkPixbufLoader>)>()
external ffi.Pointer<GdkPixbuf> gdk_pixbuf_loader_get_pixbuf(
  ffi.Pointer<GdkPixbufLoader> loader,
);

@ffi.Native<ffi.Int Function(ffi.Pointer<GdkPixbuf>)>()
external int gdk_pixbuf_get_width(ffi.Pointer<GdkPixbuf> pixbuf);

@ffi.Native<ffi.Int Function(ffi.Pointer<GdkPixbuf>)>()
external int gdk_pixbuf_get_height(ffi.Pointer<GdkPixbuf> pixbuf);

@ffi.Native<
  ffi.Pointer<GdkPixbuf> Function(
    ffi.Pointer<GdkPixbuf>,
    ffi.Int,
    ffi.Int,
    ffi.UnsignedInt,
  )
>(symbol: 'gdk_pixbuf_scale_simple')
external ffi.Pointer<GdkPixbuf> _gdk_pixbuf_scale_simple(
  ffi.Pointer<GdkPixbuf> src,
  int dest_width,
  int dest_height,
  int interp_type,
);

ffi.Pointer<GdkPixbuf> gdk_pixbuf_scale_simple(
  ffi.Pointer<GdkPixbuf> src,
  int dest_width,
  int dest_height,
  GdkInterpType interp_type,
) => _gdk_pixbuf_scale_simple(src, dest_width, dest_height, interp_type.value);

@ffi.Native<ffi.Pointer<GdkPixbuf> Function(ffi.Pointer<GdkPixbuf>)>()
external ffi.Pointer<GdkPixbuf> gdk_pixbuf_apply_embedded_orientation(
  ffi.Pointer<GdkPixbuf> src,
);

@ffi.Native<
  gboolean Function(
    ffi.Pointer<GdkPixbuf>,
    ffi.Pointer<ffi.Pointer<gchar>>,
    ffi.Pointer<gsize>,
    ffi.Pointer<ffi.Char>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<ffi.Char>>,
    ffi.Pointer<ffi.Pointer<GError>>,
  )
>()
external int gdk_pixbuf_save_to_bufferv(
  ffi.Pointer<GdkPixbuf> pixbuf,
  ffi.Pointer<ffi.Pointer<gchar>> buffer,
  ffi.Pointer<gsize> buffer_size,
  ffi.Pointer<ffi.Char> type,
  ffi.Pointer<ffi.Pointer<ffi.Char>> option_keys,
  ffi.Pointer<ffi.Pointer<ffi.Char>> option_values,
  ffi.Pointer<ffi.Pointer<GError>> error,
);

@ffi.Native<ffi.Pointer<GSList> Function()>()
external ffi.Pointer<GSList> gdk_pixbuf_get_formats();

@ffi.Native<ffi.Pointer<gchar> Function(ffi.Pointer<GdkPixbufFormat>)>()
external ffi.Pointer<gchar> gdk_pixbuf_format_get_name(
  ffi.Pointer<GdkPixbufFormat> format,
);

@ffi.Native<gboolean Function(ffi.Pointer<GdkPixbufFormat>)>()
external int gdk_pixbuf_format_is_writable(ffi.Pointer<GdkPixbufFormat> format);

/// --- GLib / GObject memory management ---
@ffi.Native<ffi.Void Function(gpointer)>()
external void g_free(gpointer mem);

@ffi.Native<ffi.Void Function(ffi.Pointer<GSList>)>()
external void g_slist_free(ffi.Pointer<GSList> list);

@ffi.Native<ffi.Void Function(ffi.Pointer<GError>)>()
external void g_error_free(ffi.Pointer<GError> error);

@ffi.Native<ffi.Void Function(gpointer)>()
external void g_object_unref(gpointer object);

/// --- GLib primitive typedefs (stable across the GLib 2.x ABI) ---
typedef gint = ffi.Int;
typedef Dartgint = int;
typedef gboolean = gint;
typedef gchar = ffi.Char;
typedef Dartgchar = int;
typedef guchar = ffi.UnsignedChar;
typedef Dartguchar = int;
typedef gsize = ffi.UnsignedLong;
typedef Dartgsize = int;
typedef guint32 = ffi.UnsignedInt;
typedef Dartguint32 = int;
typedef GQuark = guint32;
typedef gpointer = ffi.Pointer<ffi.Void>;

final class GdkPixbuf extends ffi.Opaque {}

final class GdkPixbufLoader extends ffi.Opaque {}

final class GdkPixbufFormat extends ffi.Opaque {}

/// --- GError: only `message` is read by the backend ---
/// Anonymous tag so ffigen names the Dart class `GError` (a leading-underscore
/// C tag like the real `struct _GError` would be emitted as a private class).
final class GError extends ffi.Struct {
  @GQuark()
  external int domain;

  @gint()
  external int code;

  external ffi.Pointer<gchar> message;
}

/// --- GSList: singly linked list node; `data` holds a GdkPixbufFormat* ---
/// Needs a tag for the self-reference; keep it underscore-free for the same
/// reason as GError above.
final class GSList extends ffi.Struct {
  external gpointer data;

  external ffi.Pointer<GSList> next;
}

/// --- GdkInterpType: the backend uses GDK_INTERP_HYPER (== 3) ---
enum GdkInterpType {
  GDK_INTERP_NEAREST(0),
  GDK_INTERP_TILES(1),
  GDK_INTERP_BILINEAR(2),
  GDK_INTERP_HYPER(3);

  final int value;
  const GdkInterpType(this.value);

  static GdkInterpType fromValue(int value) => switch (value) {
    0 => GDK_INTERP_NEAREST,
    1 => GDK_INTERP_TILES,
    2 => GDK_INTERP_BILINEAR,
    3 => GDK_INTERP_HYPER,
    _ => throw ArgumentError('Unknown value for GdkInterpType: $value'),
  };
}
